# ceia-iia

./: pyproject.toml
2-linreg/: solucion.ipynb
3-spam/: solucion.ipynb
hanoi/: solucion.ipynb
