[project]
name = "intro-ia"
version = "0.1.0"
description = ""
authors = [{ name = "Facundo Adrián Lucianna", email = "facundolucianna@gmail.com" }]
requires-python = ">=3.10,<3.13"
readme = "README.md"
dependencies = [
    "numpy>=1.26.4,<2",
    "pandas>=2.2.2,<3",
    "scipy>=1.13.1,<2",
    "matplotlib>=3.9.0,<4",
    "seaborn>=0.13.2,<0.14",
    "scikit-learn>=1.5.0,<2",
    "pygame>=2.5.2,<3",
    "vizdoom>=1.2.3,<2",
    "jupyter>=1.0.0,<2",
    "pyarrow>=16.1.0,<17",
    "jupyterlab>=4.2.5,<5",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
